                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
[ When backported to 2.2.x, remove entry from this file ]

  *) mod_include: Add an "if" directive syntax to test whether an URL
     is accessible, and if so, conditionally display content. This
     allows a webmaster to hide a link to a private page when the user
     has no access to that page. [Graham Leggett]

  *) mod_authnz_ldap, mod_authn_dbd: Tidy up the code to expose authn
     parameters to the environment. Improve portability to
     EBCDIC machines by using apr_toupper(). [Martin Kraemer]

  *) mod_proxy: Improve network performance by setting APR_TCP_NODELAY
     (disable Nagle algorithm) on sockets if implemented.
     PR 42871 [Christian BOITEL <christian_boitel yahoo.fr>, Jim Jagielski]

  *) mod_info: mod_info outputs invalid XHTML 1.0 transitional.
     PR 42847 [Rici Lake <rici ricilake.net>]

  *) mime.types: add registered Apple installer type
     PR 40379 [Peter Bierman <pmb+apache apple.com>]

  *) mod_ldap, mod_authnzldap: Add support for nested groups (i.e. the ability
     to authorize an authenticated user via a "require ldap-group X" directive
     where the user is not in group X, but is in a subgroup contained in X.
     PR 42891 [Paul J. Reder]

  *) Event MPM: Add support for running under mod_ssl, by reverting to the
     Worker MPM behaviors, when run under an input filter that buffers
     its own data. [Paul Querna]

  *) mod_ssl: Add support for caching SSL Sessions in memcached. [Paul Querna]

  *) mod_substitute: Added a new experimental output filter, which
     performs inline response content pattern matching (including
     regex) and substitution.  [Jim Jagielski]

  *) core: Change etag generation to produce identical results on 
     32-bit and 64-bit platforms.  PR 40064.  [Joe Orton]

  *) ab: Add -r option to continue after socket receive errors. 
     [Filip Hanik <devlist hanik.com>]
